tests/snapshots/lexer__keywords__or.snap
---
source: tests/lexer.rs
expression: "lex(\"or\")"
---
Ok(
    [
        Token {
            kind: Or,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
