tests/snapshots/lexer__keywords__true_.snap
---
source: tests/lexer.rs
expression: "lex(\"true\")"
---
Ok(
    [
        Token {
            kind: Bool(
                true,
            ),
            span: Span {
                start: 0,
                end: 4,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4,
                end: 4,
            },
        },
    ],
)
